// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=bb437503fa9c7e9d755d",
    194,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4066,
    {
      "compressed": true,
      "immutable": true,
      "size": 4066,
    },
  ],
  [
    "main.js?var=bb437503fa9c7e9d755d",
    16296,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16296,
    },
  ],
]
`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): errors 1`] = `[]`;

exports[`"include" option matches snapshot for a single \`include\` value ({RegExp}): warnings 1`] = `[]`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=bb437503fa9c7e9d755d",
    194,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4066,
    {
      "compressed": true,
      "immutable": true,
      "size": 4066,
    },
  ],
  [
    "main.js?var=bb437503fa9c7e9d755d",
    16296,
    {
      "fullhash": "bb437503fa9c7e9d755d",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16296,
    },
  ],
]
`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): errors 1`] = `[]`;

exports[`"include" option matches snapshot for multiple \`include\` values ({Array<RegExp>}): warnings 1`] = `[]`;
